Added Deployemnet Config

--- a/.env
+++ b/.env
@@ -1,37 +1,42 @@
+# .env (Local Development)
 # Django Core Settings
-SECRET_KEY=django-insecure-your-secret-key-change-this-in-production
+SECRET_KEY=django-insecure-development-key-change-in-production
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1,*.localhost,yourdomain.com
+ALLOWED_HOSTS=localhost,127.0.0.1,*.localhost
 
-# Database Configuration
+# Database Configuration (Local PostgreSQL)
 DB_NAME=autowash_db
-DB_USER=postgres
-DB_PASSWORD=Brandon
+DB_USER=autowash
+DB_PASSWORD=autowash
 DB_HOST=localhost
 DB_PORT=5432
+DB_ENGINE=postgresql
 
-# Redis Configuration (for cache, sessions, and Celery)
+# Redis Configuration (Local Redis)
 REDIS_URL=redis://localhost:6379
 
-# Email Configuration
+# Email Configuration (Development - using Gmail)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your_email@gmail.com
 EMAIL_HOST_PASSWORD=your_app_password
-DEFAULT_FROM_EMAIL=noreply@autowash.com
+DEFAULT_FROM_EMAIL=noreply@localhost
 
-# SMS Configuration (Africa's Talking or similar)
+# SMS Configuration (Sandbox)
 SMS_API_KEY=your_sms_api_key
 SMS_USERNAME=sandbox
 
-# M-Pesa Configuration (Safaricom)
+# M-Pesa Configuration (Sandbox)
 MPESA_ENVIRONMENT=sandbox
 MPESA_CONSUMER_KEY=your_mpesa_consumer_key
 MPESA_CONSUMER_SECRET=your_mpesa_consumer_secret
 MPESA_SHORTCODE=174379
 MPESA_PASSKEY=your_mpesa_passkey
-MPESA_CALLBACK_URL=https://yourdomain.com/api/mpesa/callback/
+MPESA_CALLBACK_URL=http://localhost:8000/api/mpesa/callback/
 
-# Sentry (Error Tracking - Production only)
-SENTRY_DSN=your_sentry_dsn_url
+# Sentry (Disabled in development)
+SENTRY_DSN=
+
+---
+
