Updated debug config

--- a/.env.render_debug
+++ b/.env.render_debug
@@ -1,6 +1,10 @@
 SECRET_KEY=your-super-secure-production-secret-key-here-make-it-very-long-and-random
 DEBUG=False
 PRODUCTION_DEBUG=True
+PRODUCTION_DEBUG_LEVEL=DEBUG
+PRODUCTION_DEBUG_SQL=True
+PRODUCTION_DEBUG_REQUESTS=True
+PRODUCTION_DEBUG_TOOLBAR=True
 ALLOWED_HOSTS=.onrender.com,autowash.co.ke,www.autowash.co.ke,*.autowash.co.ke
 
 DATABASE_URL=postgresql://autowash_db_dsd1_user:FeJYKXptUYTwFYb7Ty32A2L5vm0jkyqJ@dpg-d102gtbipnbc738esk6g-a.oregon-postgres.render.com/autowash_db_dsd1
@@ -22,8 +26,9 @@ MPESA_CONSUMER_KEY=your_production_mpesa_consumer_key
 MPESA_CONSUMER_SECRET=your_production_mpesa_consumer_secret
 MPESA_SHORTCODE=your_production_shortcode
 MPESA_PASSKEY=your_production_mpesa_passkey
-MPESA_CALLBACK_URL=https://autowash-web.onrender.com/api/mpesa/callback/
+MPESA_CALLBACK_URL=https://autowash-3jpr.onrender.com/api/mpesa/callback/
 
+# Sentry disabled during debugging
 SENTRY_DSN=
 
 RENDER=True
