Updated render debug settings

--- a/.env.render_debug
+++ b/.env.render_debug
@@ -1,16 +1,20 @@
+# Environment Configuration
+RENDER=True
 SECRET_KEY=your-super-secure-production-secret-key-here-make-it-very-long-and-random
-DEBUG=False
-PRODUCTION_DEBUG=True
-PRODUCTION_DEBUG_LEVEL=DEBUG
-PRODUCTION_DEBUG_SQL=True
-PRODUCTION_DEBUG_REQUESTS=True
-PRODUCTION_DEBUG_TOOLBAR=True
+DEBUG=True
 ALLOWED_HOSTS=.onrender.com,autowash.co.ke,www.autowash.co.ke,*.autowash.co.ke
 
+# Render-specific Configuration
+RENDER_EXTERNAL_HOSTNAME=autowash-3jpr.onrender.com
+RENDER_SERVICE_NAME=autowash-web
+
+# Database Configuration (Render PostgreSQL)
 DATABASE_URL=postgresql://autowash_db_dsd1_user:FeJYKXptUYTwFYb7Ty32A2L5vm0jkyqJ@dpg-d102gtbipnbc738esk6g-a.oregon-postgres.render.com/autowash_db_dsd1
 
+# Redis Configuration (Render Redis)
 REDIS_URL=redis://red-xxxxxxxxx:6379
 
+# Email Configuration (Production)
 EMAIL_HOST=mail.autowash.co.ke
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
@@ -18,9 +22,11 @@ EMAIL_HOST_USER=noreply@autowash.co.ke
 EMAIL_HOST_PASSWORD=@autowash254
 DEFAULT_FROM_EMAIL=Autowash <noreply@autowash.co.ke>
 
+# SMS Configuration (Production)
 SMS_API_KEY=your_production_sms_api_key
 SMS_USERNAME=your_sms_username
 
+# M-Pesa Configuration (Production)
 MPESA_ENVIRONMENT=production
 MPESA_CONSUMER_KEY=your_production_mpesa_consumer_key
 MPESA_CONSUMER_SECRET=your_production_mpesa_consumer_secret
@@ -30,6 +36,3 @@ MPESA_CALLBACK_URL=https://autowash-3jpr.onrender.com/api/mpesa/callback/
 
 # Sentry disabled during debugging
 SENTRY_DSN=
-
-RENDER=True
-RENDER_SERVICE_NAME=autowash-web
