Added Health Check

--- a/.cpanel.env
+++ b/.cpanel.env
@@ -31,7 +31,7 @@ MPESA_CALLBACK_URL=https://app.autowash.co.ke/api/mpesa/callback/
 STATIC_URL=/static/
 MEDIA_URL=/media/
 
-SENTRY_DSN=your_sentry_dsn_here
+SENTRY_DSN=https://46bed25227e4aadaeefc55e187bddf28@o4509513258958848.ingest.us.sentry.io/4509513260400640
 
 CPANEL_PYTHON_VERSION=3.9
 CPANEL_WSGI_FILE=passenger_wsgi.py
