--- a/.gitignore
+++ b/.gitignore
@@ -425,6 +425,42 @@ debug.log
 error.log
 access.log
 
+# Development and test scripts
+*test*.py
+check_*.py
+debug_*.py
+analyze_*.py
+fix_*.py
+reset_*.py
+create_test_*.py
+create_fresh_*.py
+manual_*.py
+cleanup_*.py
+complete_*.py
+detailed_*.py
+emergency_*.py
+diagnose_*.py
+
+# Development documentation
+*.md
+config.md
+MIGRATION_*.md
+MYSQL_*.md
+
+# Extra environment files
+.env.*
+.cpanel.env
+
+# SSH and deployment files
+ssh.txt
+*.zip
+
+# Log files in logs directory
+logs/*.log
+
+# Scripts directory
+
+
 # Miscellaneous
 .sass-cache/
 .connect.lock
