--- a/.htaccess
+++ b/.htaccess
@@ -22,15 +22,15 @@ RewriteEngine On
 
 # Serve static files directly without going through Django
 RewriteCond %{REQUEST_URI} ^/static/
-RewriteRule ^static/(.*)$ /public_html/static/$1 [L,QSA]
+RewriteRule ^static/(.*)$ static/$1 [L,QSA]
 
 # Serve media files directly
 RewriteCond %{REQUEST_URI} ^/media/
-RewriteRule ^media/(.*)$ /public_html/media/$1 [L,QSA]
+RewriteRule ^media/(.*)$ media/$1 [L,QSA]
 
 # Don't rewrite requests for existing files or directories
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
 # Pass all other requests to Django
-RewriteRule ^(.*)$ /passenger_wsgi.py/$1 [QSA,L]
+RewriteRule ^(.*)$ passenger_wsgi.py/$1 [QSA,L]
