Add .htaccess to .gitignore and remove from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,7 @@ Thumbs.db
 # Local configuration files
 local_settings.py
 settings_local.py
+.htaccess
 
 # Collected static files
 /staticfiles/
